# threerender

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: test-wgpu.yml  test.yml
examples/camera/: Cargo.toml  README.md
examples/camera/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/draw_lines/: Cargo.toml  README.md
examples/draw_lines/src/: main.rs
examples/dynamic_entity/: Cargo.toml  README.md
examples/dynamic_entity/src/: main.rs
examples/gltf/: Cargo.toml  README.md
examples/gltf/assets/: SimpleMesh.gltf
examples/gltf/src/: main.rs
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: main.rs
examples/normal_map/: Cargo.toml  README.md
examples/normal_map/src/: main.rs
examples/renderer_specific/: Cargo.toml  README.md
examples/renderer_specific/src/: main.rs
examples/shadow/: Cargo.toml  README.md
examples/shadow/src/: main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
examples/texture2d/: Cargo.toml  README.md
examples/texture2d/src/: main.rs
shader_processor/: Cargo.toml  README.md
shader_processor/assets/: test.wgsl  test_bias.wgsl
shader_processor/assets/builtin/: light.wgsl  light2.wgsl
shader_processor/src/: lib.rs  wgsl.rs
threerender/: Cargo.toml  README.md
threerender/src/: entity.rs  lib.rs  renderer_builder.rs  scene.rs  unit.rs
threerender/src/math/: mod.rs  vec.rs
threerender/src/mesh/: entity2d.rs  entity3d.rs  line.rs  mesh.rs  mesh2d.rs  mesh3d.rs  mod.rs  primitive.rs  traits.rs  types.rs  util.rs
threerender/src/renderer/: mod.rs
threerender/src/renderer/_wgpu/: builder.rs  entity.rs  mod.rs  processor.rs  renderer.rs  scene.rs  shadow.rs  uniform.rs  unit.rs
threerender/src/renderer/_wgpu/shaders/: 3d.wgsl  entity.wgsl  shadow.wgsl  shadow_tex.wgsl  shared.wgsl  texture.wgsl  texture2d.wgsl
threerender/src/renderer/_wgpu/shaders/builtin/: reflection.wgsl
threerender/src/renderer/_wgpu/shaders/builtin/light/: directional.wgsl  hemisphere.wgsl  mod.wgsl  shared.wgsl  types.wgsl  uniforms.wgsl
threerender/src/renderer/_wgpu/shaders/builtin/light/shadow/: directional.wgsl  mask.wgsl  mod.wgsl  normal.wgsl  pcss.wgsl  uniforms.wgsl  utils.wgsl
threerender/src/renderer/_wgpu/shaders/builtin/math/: affine.wgsl  mod.wgsl
threerender/src/renderer/_wgpu/shaders/builtin/shadow/: directional.wgsl  mod.wgsl  shared.wgsl
threerender/src/scene/: camera.rs  light.rs  mod.rs
threerender/src/unit/: color.rs  mod.rs  trs.rs
threerender/src/utils/: vec.rs
threerender_color/: Cargo.toml
threerender_color/src/: rgb.rs
threerender_entities/: Cargo.toml
threerender_entities/src/: entity2d.rs  entity3d.rs  lib.rs  line.rs  plane.rs  point.rs  polygon.rs  sphere.rs  square.rs  types.rs
threerender_loader/: Cargo.toml  README.md
threerender_loader/src/: lib.rs
threerender_loader/src/fetcher/: err.rs  file_system.rs  image.rs  mod.rs  traits.rs
threerender_loader/src/gltf/: err.rs  fetcher.rs  handler.rs  loader.rs  mod.rs
threerender_math/: Cargo.toml
threerender_math/src/: lib.rs  quat.rs  transform.rs  trs.rs  vec.rs
threerender_traits/: Cargo.toml
threerender_traits/src/: image.rs  lib.rs  types.rs
threerender_traits/src/entity/: descriptor.rs  mod.rs
threerender_traits/src/mesh/: mod.rs  traits.rs  types.rs  utils.rs
