[package]
name = "threerender_entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
threerender_traits = { path = "../threerender_traits" }
threerender_math = { path = "../threerender_math" }
