[package]
name = "threerender_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mesh"]
mesh = []

[dependencies]
threerender_math = { path = "../threerender_math" }
bytemuck = { version = "1.12.3", features = ["derive"]}
