[package]
name = "examples_camera"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="camera"
path="src/main.rs"

[features]
default = ["wgpu"]

[dependencies]
threerender = { path = "../../threerender" }
examples_common = { path = "../common" }
wgpu = { git = "https://github.com/gfx-rs/wgpu", optional = true }
winit = "0.27.5"
image = "0.24.5"
pollster = "0.2.5"
