[package]
name = "examples_gltf"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu", "duck"]
duck = []
avocado = []
cylinder_engine = []

[dependencies]
threerender = { path = "../../threerender" }
threerender_loader = { path = "../../threerender_loader" }
examples_common = { path = "../common" }
wgpu = { git = "https://github.com/gfx-rs/wgpu", optional = true }
