[package]
name = "examples_hello_world"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threerender = { path = "../../threerender" }
glam = "0.22.0"
examples_common = { path = "../common" }
