[package]
name = "examples_simple"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu"]

[dependencies]
threerender = { path = "../../threerender" }
wgpu = { git = "https://github.com/gfx-rs/wgpu", optional = true }
glam = "0.22.0"
env_logger = "0.10.0"
winit = "0.27.5"
image = "0.24.5"
pollster = "0.2.5"
wasm-bindgen-futures = "0.4.34"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.61"
